@@ -17,7 +17,7 @@ sourceSets {
     main {
         java {
             srcDir 'src/main/java'
-//            java.outputDir = file('bin/main')
+            java.outputDir = file('bin/main')
         }
         resources {
             srcDir rootProject.file("config/dev")
@@ -26,7 +26,7 @@ sourceSets {
     test {
         java {
             srcDir 'src/test/java'
-//            java.outputDir = file('bin/main')
+            java.outputDir = file('bin/main')
         }
         resources {
             srcDir rootProject.file("config/test")
@@ -42,8 +42,8 @@ sourceSets {
 }
 
 configurations {
-    integrationTestCompile.extendsFrom testCompile
-    integrationTestRuntime.extendsFrom testRuntime
+    integrationTestCompile.extendsFrom testImplementation
+    integrationTestRuntime.extendsFrom testRuntimeOnly
 }
 
 dependencies {
@@ -95,18 +95,8 @@ quasar {
 task integrationTest(type: Test, dependsOn: []) {
     testClassesDirs = sourceSets.integrationTest.output.classesDirs
     classpath = sourceSets.integrationTest.runtimeClasspath
-    jvmArgs =  rootProject.ext.test_add_opens + test_add_opens_fx
 }
 
 test {
-    jvmArgs = ['--add-opens', 'java.base/java.time=ALL-UNNAMED', '--add-opens', 'java.base/java.io=ALL-UNNAMED',
-               '--add-opens', 'java.base/java.util=ALL-UNNAMED', '--add-opens', 'java.base/java.net=ALL-UNNAMED',
-               '--add-opens', 'java.base/java.nio=ALL-UNNAMED', '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
-               '--add-opens', 'java.base/java.security.cert=ALL-UNNAMED', '--add-opens', 'java.base/java.security=ALL-UNNAMED',
-               '--add-opens', 'java.base/javax.net.ssl=ALL-UNNAMED', '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
-               '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED', '--add-opens', 'java.sql/java.sql=ALL-UNNAMED',]
-}
-
-jar {
-    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    jvmArgs = rootProject.ext.testJvmArgs
 }
