@@ -41,7 +41,7 @@ dependencies {
     testImplementation "$corda_release_group:corda-node-driver:$corda_release_version"
 
     testImplementation "junit:junit:$junit_version"
-    cordaProvided "org.apache.logging.log4j:log4j-slf4j-impl:${log4j_version}"
+    cordaProvided "org.apache.logging.log4j:log4j-slf4j2-impl:${log4j_version}"
 }
 
 tasks.withType(JavaCompile) {
@@ -49,12 +49,6 @@ tasks.withType(JavaCompile) {
 }
 
 test {
-    jvmArgs = ['--add-opens', 'java.base/java.time=ALL-UNNAMED', '--add-opens', 'java.base/java.io=ALL-UNNAMED',
-               '--add-opens', 'java.base/java.util=ALL-UNNAMED', '--add-opens', 'java.base/java.net=ALL-UNNAMED',
-               '--add-opens', 'java.base/java.nio=ALL-UNNAMED', '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
-               '--add-opens', 'java.base/java.security.cert=ALL-UNNAMED', '--add-opens', 'java.base/java.security=ALL-UNNAMED',
-               '--add-opens', 'java.base/javax.net.ssl=ALL-UNNAMED', '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
-               '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED', '--add-opens', 'java.sql/java.sql=ALL-UNNAMED',
-               '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',]
+    jvmArgs = rootProject.ext.testJvmArgs
 }
 
