@@ -23,7 +23,7 @@ dependencies {
     corda "$corda_release_group:corda:$corda_release_version"
 
     testImplementation "$corda_release_group:corda-node-driver:$corda_release_version"
-    testImplementation "org.apache.logging.log4j:log4j-slf4j-impl:$log4j_version"
+    testImplementation "org.apache.logging.log4j:log4j-slf4j2-impl:$log4j_version"
     testImplementation "junit:junit:$junit_version"
 
     // OkHTTP: A simple HTTP library.
@@ -35,26 +35,6 @@ jar {
     exclude '**/log4j2*.xml'
 }
 
-task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
-    node {
-        name "O=PartyA,L=London,C=GB"
-        p2pPort 10005
-        rpcSettings {
-            address("localhost:10006")
-            adminAddress("localhost:10046")
-        }
-//        cordapps = []
-	runSchemaMigration = true
-        rpcUsers = [[ user: "user1", "password": "test", "permissions": ["StartFlow.com.flowhttp.HttpCallFlow"]]]
-    }
-}
-
 test {
-    jvmArgs = ['--add-opens', 'java.base/java.time=ALL-UNNAMED', '--add-opens', 'java.base/java.io=ALL-UNNAMED',
-               '--add-opens', 'java.base/java.util=ALL-UNNAMED', '--add-opens', 'java.base/java.net=ALL-UNNAMED',
-               '--add-opens', 'java.base/java.nio=ALL-UNNAMED', '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
-               '--add-opens', 'java.base/java.security.cert=ALL-UNNAMED', '--add-opens', 'java.base/java.security=ALL-UNNAMED',
-               '--add-opens', 'java.base/javax.net.ssl=ALL-UNNAMED', '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
-               '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED', '--add-opens', 'java.sql/java.sql=ALL-UNNAMED',
-               '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',]
+    jvmArgs = rootProject.ext.testJvmArgs
 }
